--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/vec2d.cpython-35.pyc
 __pycache__/vec2d.cpython-35.pyc
 __pycache__/vec2d.cpython-35.pyc
 __pycache__/vec2d.cpython-35.pyc
+__pycache__/vec2d.cpython-35.pyc
