--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ __pycache__/vec2d.cpython-35.pyc
 __pycache__/vec2d.cpython-35.pyc
 __pycache__/vec2d.cpython-35.pyc
 __pycache__/vec2d.cpython-35.pyc
+__pycache__/vec2d.cpython-35.pyc
